Modificacion menu, agregado pandillas
Menu y pandillas

--- a/frontend/src/app/encuestas/encuestas.component.html
+++ b/frontend/src/app/encuestas/encuestas.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center" style="padding-top: 10px;">
-    <button mat-icon-button color="primary" (click)="volver()">
+    <button class="btn btn-primary btn-md my-2 mb-2" mat-icon-button color="primary" (click)="volver()">
         <mat-icon>arrow_back</mat-icon>
     </button>
     <h1>Encuestas Realizadas</h1>
