--- a/frontend/src/app/component/encabezado/encabezado.component.html
+++ b/frontend/src/app/component/encabezado/encabezado.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid text-right bg-primary">
-    <img src="assets/img/logo.jpg" alt="Logo" class="mx-auto" style="width: 70px; padding-bottom: 10px; padding-top: 5px;">
+    <img src="assets/img/logo.jpg" alt="Logo" class="mx-auto" (click)="volver()" style="width: 70px; padding-bottom: 10px; padding-top: 5px;">
 </div>
