correcciones menores a index y agregar-pandilla

--- a/frontend/src/app/agregar-pandilla/agregar-pandilla.component.html
+++ b/frontend/src/app/agregar-pandilla/agregar-pandilla.component.html
@@ -10,8 +10,14 @@
             </div>
             <div class="col">
                 <div class="form-group">
+                    <label for="text">Colonia:</label>
+                    <input type="text" class="form-control"  name="colonia" placeholder="">
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
                     <label for="text">Ciudad:</label>
-                    <input type="text" class="form-control"  name="apodo" placeholder="Apodaca">
+                    <input type="text" class="form-control"  name="ciudad" placeholder="Apodaca">
                 </div>
             </div>
             <div class="col">
