--- a/frontend/src/app/inicio/inicio.component.html
+++ b/frontend/src/app/inicio/inicio.component.html
@@ -4,12 +4,12 @@
     <hr/>
     <div class="row pb-4">
         <div class="col-md-12 text-center">
-                <button type="button" class="btn btn-primary btn-lg mx-5" (click)="navigateToEncuestas()"><h1 style=font-size:4em><i class="fa fa-poll"></i></h1> Listado de Personas</button>
-                <button type="button" class="btn btn-primary btn-lg mx-5" (click)="navigateToAgregarEncuesta()"><h1 style=font-size:4em><i class="fa fa-poll"></i></h1> Agregar Personas</button> 
-                <button type="button" class="btn btn-primary btn-lg mx-5" (click)="navigateToPandillas()"><h1 style=font-size:4em><i class="fa fa-users"></i></h1> Listado de Pandillas</button>
-                <button type="button" class="btn btn-primary btn-lg mx-5" (click)="navigateToAgregarPandillas()"><h1 style=font-size:4em><i class="fa fa-users"></i></h1> Agregar Pandillas</button>
+                <button type="button" class="btn btn-primary mx-5" (click)="navigateToEncuestas()"><h1 style=font-size:4em><i class="fa fa-poll"></i></h1> Listado de Personas</button>
+                <button type="button" class="btn btn-primary  mx-5" (click)="navigateToAgregarEncuesta()"><h1 style=font-size:4em><i class="fa fa-poll"></i></h1> Agregar Personas</button> 
+                <button type="button" class="btn btn-primary mx-5" (click)="navigateToPandillas()"><h1 style=font-size:4em><i class="fa fa-users"></i></h1> Listado de Pandillas</button>
+                <button type="button" class="btn btn-primary mx-5" (click)="navigateToAgregarPandillas()"><h1 style=font-size:4em><i class="fa fa-users"></i></h1> Agregar Pandillas</button>
 
-                <button type="button" class="btn btn-secondary btn-lg mx-5" (click)="navigateToEventos()"><h1 style=font-size:4em><i class="fa fa-futbol"></i></h1> Eventos</button>
+                <button type="button" class="btn btn-primary mx-5" (click)="navigateToEventos()"><h1 style=font-size:4em><i class="fa fa-futbol"></i></h1> Eventos</button>
 
         </div>
     </div>   
